[package]
name = "intersect"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngrams = "1.0.1"
fst = "0.4.5"
bencher = "0.1.5"
regex = "1.4.5"
aho-corasick = "0.7"